<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.dependa.pedometer.ScoreActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:rotation="-45"
            android:text="@string/sleep_habit"
            android:textColor="@color/score_sleep" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/meal_habit"
            android:textColor="@color/score_meal" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView16"
            android:rotation="45"
            android:text="@string/exercise_habit"
            android:textColor="@color/score_step" />

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/radarchart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp">

        </com.github.mikephil.charting.charts.RadarChart>

        <TextView
            android:id="@+id/textview19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/score_sum"
            android:layout_centerHorizontal="true"
            android:text="@string/score_sum"
            android:textColor="@color/score_sum"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/score_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textColor="@color/score_sum"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goto_bmi_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:text="@string/bmi_change"
                android:textColor="@color/buttonText" />

            <Button
                android:id="@+id/goto_stepsize_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:text="@string/stepsize_change"
                android:textColor="@color/buttonText" />
            <Button
                android:id="@+id/goto_step_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:text="@string/step_change"
                android:textColor="@color/buttonText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goto_meal_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:text="@string/meal_change"
                android:textColor="@color/buttonText" />
            <Button
                android:id="@+id/goto_sleeptime_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:text="@string/sleeptime_change"
                android:textColor="@color/buttonText" />
            <Button
                android:id="@+id/goto_sleep_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@color/mainColor"
                android:text="@string/sleep_change"
                android:textColor="@color/buttonText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pedoLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/pedo_logo" />

        <TextView
            android:id="@+id/pedoLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/app_title"
            android:textColor="@color/mainColor" />
    </LinearLayout>
</LinearLayout>
