<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dependa.pedometer.UserInfoActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/change_userinfo_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll_registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/userinfo_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/emailview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/emailtitle"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/mainColor"
                    android:text="@string/prompt_email" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:hint="@string/prompt_email"
                    android:maxLines="1" />

            </LinearLayout>

            <TextView
                android:id="@+id/changepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/change_password"
                android:textColorHint="@color/mainColor"
                android:textColor="@color/mainColor"
                android:maxLines="1"
                android:padding="8dp" />

            <TextView
                android:id="@+id/group_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/group_setting"
                android:textColorHint="@color/mainColor"
                android:textColor="@color/mainColor"
                android:maxLines="1"
                android:padding="8dp" />

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/disabled_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userName"
                    android:inputType="text"
                    android:textColor="@color/mainColor"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/prompt_gender"
                    android:textColor="@color/mainColor" />

                <Spinner
                    android:id="@+id/select_gender"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_gender"
                    android:textColor="@color/mainColor"
                    android:maxLines="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/prompt_birthday"
                    android:textColor="@color/mainColor" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="@color/mainColor"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignBottom="@+id/birthday"
                    android:layout_toEndOf="@+id/birthday"
                    android:layout_toRightOf="@+id/birthday"
                    android:background="@color/mainColor"
                    android:text="@string/select"
                    android:textColor="@color/buttonText" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/disabled_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userHeight"
                    android:inputType="number"
                    android:textColor="@color/mainColor"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/disabled_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userWeight"
                    android:inputType="number"
                    android:textColor="@color/mainColor"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/prompt_userHabit"
                    android:textColor="@color/mainColor" />

                <Spinner
                    android:id="@+id/select_habit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userHabit"
                    android:textColor="@color/mainColor"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/prompt_userStep"
                    android:textColor="@color/mainColor" />

                <Spinner
                    android:id="@+id/select_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_userStep"
                    android:textColor="@color/mainColor"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/change_userinfo_btn"
        style="?android:textAppearanceSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/mainColor"
        android:textColor="@color/buttonText"
        android:text="@string/change_userinfo"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pedoLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/pedo_logo" />

        <TextView
            android:id="@+id/pedoLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/app_title"
            android:textColor="@color/mainColor" />
    </LinearLayout>
</LinearLayout>
