<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.dependa.pedometer.HistogramActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:layout_weight="0.57">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="13dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="120dp"
            android:text="@string/text_step_count"
            android:textColor="@color/mainColor" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/histogramchart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_step_width"
        android:textColor="@color/mainColor" />

    <LinearLayout
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pedoLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/pedo_logo" />

        <TextView
            android:id="@+id/pedoLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="@string/app_title"
            android:textColor="@color/mainColor" />
    </LinearLayout>
</LinearLayout>
